[Update]ユーザーの詳細を変更

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -16,6 +16,7 @@ ja:
       end_user:
         name: 名前
         email: メールアドレス
+        profile_image: プロフィール画像
         password: パスワード
       admin:
         email: メールアドレス
