--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -226,4 +226,10 @@ ja:
       short: "%m/%d %H:%M"
       age: "%"
     pm: 午後
-        
+  views:
+    pagination:
+      first: <i class="fas fa-angle-double-left"></i>
+      last: <i class="fas fa-angle-double-right"></i>
+      previous: <i class="fas fa-angle-left"></i>
+      next: <i class="fas fa-angle-right"></i>
+      truncate: "..."
