[Update]新規登録のエラーメッセージを変更

--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -138,6 +138,5 @@ ja:
       expired: の有効期限が切れました。新しくリクエストしてください。
       not_found: は見つかりませんでした。
       not_locked: はロックされていません。
-      not_saved:
-        one: エラーが発生したため %{resource} は保存されませんでした。
-        other: "%{count} 件の項目が満たされておりません。"
+      not_saved: 20文字以内の名前、メールアドレス、パスワードが正しく入力されているか、もう一度ご確認下さい
+
