[Update]deviseのエラーメッセージ、ボタンのレイアウトを変更

--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -113,8 +113,8 @@ ja:
       already_signed_out: 既にログアウト済みです。
       new:
         sign_in: ログイン
-      signed_in: ログインしました。
-      signed_out: ログアウトしました。
+      signed_in: ログインしました
+      signed_out: ログアウトしました
     shared:
       links:
         back: 戻る
@@ -138,5 +138,5 @@ ja:
       expired: の有効期限が切れました。新しくリクエストしてください。
       not_found: は見つかりませんでした。
       not_locked: はロックされていません。
-      not_saved: 20文字以内の名前、メールアドレス、パスワードが正しく入力されているか、もう一度ご確認下さい
+      not_saved: 20文字以内の名前、メールアドレス、パスワードが正しく入力されているか もう一度ご確認下さい
 
